# QNNBlast

./: .gitignore  README.md  qblast_plan.md
qblast/: .gitignore  CMakeLists.txt  README.md
qblast/android/: build.gradle  gradle.properties  settings.gradle
qblast/android/app/: build.gradle
qblast/android/app/src/main/: AndroidManifest.xml
qblast/android/app/src/main/cpp/: CMakeLists.txt  tuner-jni.cpp
qblast/android/app/src/main/java/com/qblast/tuner/: MainActivity.java  TuneBroadcastReceiver.java  TunerService.java
qblast/android/app/src/main/res/layout/: activity_main.xml
qblast/android/app/src/main/res/values/: strings.xml  themes.xml
qblast/docs/: architecture.md  device_setup.md  tuning_space.md
qblast/include/: qblast.h
qblast/scripts/: apk_build_install.sh  build_dsp.sh  prep_device.sh  pull_results.sh  push_skels.sh  run_tests.sh  trigger_tune.sh  tuner_driver.py  variant_builder.py
qblast/scripts/database/: database.py  test_codegen.py
qblast/scripts/database/cfgs/: sample.json
qblast/scripts/database/json/: leaderboard.json
qblast/scripts/qnn/: README.md  build_matmul.py  run_qnn_smoke.sh
qblast/src/database/: CMakeLists.txt  database.hpp  database_structure.hpp  test_database.cpp
qblast/src/database/kernels/gemv_w4a16/: sd8e_gen5.hpp
qblast/src/kernels/hexagon/common/: fp16_compat.h
qblast/src/kernels/hexagon/gemv_w4a16/: .gitignore  Makefile  all.mak  gemv_w4a16.idl  gemv_w4a16_imp.c  hexagon.min  hexagon_deps.min  qblast_variant_config.h
qblast/src/kernels/hexagon/qblast_hello/: .gitignore  Makefile  all.mak  hexagon.min  hexagon_deps.min  qblast_hello.idl  qblast_hello_imp.c
